--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="left">
       <section class="img-phone">
-        <img src="/images/phone img.png" alt="Phone Image" />
+        <img src="./images/phone img.png" alt="Phone Image" />
       </section>
 
       <div class="img-unsplash fadeIn">
